# mamba-speech

./: .gitignore  README.md  config.yaml  foo.py  generation.py  pyproject.toml
configs/: gpt-tiny.yaml  small.yaml  tiny.yaml
src/mambaspeech/: audio.py  base.py  config.py  constants.py  gpt.py  model.py  train.py  utils.py
wandb/: latest-run
wandb/run-20240126_134420-ufcssxa5/: run-ufcssxa5.wandb
wandb/run-20240126_134420-ufcssxa5/files/: config.yaml  requirements.txt  wandb-metadata.json
